@@ -4,8 +4,10 @@
 export BOOST_ROOT="F:/code/lib/Windows-32/boost_1_51_0"
 #export OPENEXR_ROOT="C:/mrViewer_libs/lib/Deploy"
 #export     CTL_ROOT="C:/mrViewer_libs/lib/Deploy"
-export OPENEXR_ROOT="F:/code/lib/Deploy"
-export     CTL_ROOT="F:/code/lib/Deploy"
+#export OPENEXR_ROOT="F:/code/lib/Windows_32"
+#export     CTL_ROOT="F:/code/Deploy"
+export OPENEXR_ROOT="F:/code/lib/Deploy_ok"
+export     CTL_ROOT="F:/code/lib/Deploy_ok"
 
 export FFMPEG_ROOT=F:/code/lib/ffmpeg-20140512-git-5460ab7-win32-shared
 
